# cbdetect

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  training_args.json
cbdetect/: chessboard_detect.py  dirs.py  gen_diagrams.py  gen_imgs.py  inference_scripts.py  sample_games.pgn  train_model.py  utils.py
cbdetect/fen2img/: _nbdev.py  fen2img.py
fen2img/fen2img/: fen2img.py
fen2img/fen2img/pieces/: rename.sh
